# ESP32-Precision-TouchPad-BLE

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
main/: 2.4G_Transmitter_test.c.bak  CMakeLists.txt  Kconfig.projbuild  cw2015_test.c.bak  elan_hack.c  elan_test.c.bak  idf_component.yml  main.c  wlan_test.c.bak
main/ble/: ble.h  ble_descriptor.c  gatt_hid_report.c  gatt_init.c  hidd_le_prf_int.h
main/i2c/: elan_i2c.c  elan_i2c.h  i2c_int.c
main/nvs/: ptp_nvs.c  ptp_nvs.h
main/usb/: usb_descriptor.c  usbhid.c  usbhid.h
main/wireless/: broadcast.c  heartbeat.c  vbus_det.c  wireless.h
